--- a/templates/modern/header.html
+++ b/templates/modern/header.html
@@ -166,25 +166,13 @@
                         <ul class="nav nav-pills flex-column ms-3">
                             <li class="nav-item">
                                 <a class="nav-link nav-link-sm {{ current_page == 'users' ? 'active' : '' }}" href="{{ base_url_prefix }}/users">
-                                    <i class="bi bi-person-lines-fill me-2"></i>{% trans %}User administration{% endtrans %}
+                                    <i class="bi bi-person-gear me-2"></i>{% trans %}User administration{% endtrans %}
                                 </a>
                             </li>
                             {% if perm_add_new %}
                             <li class="nav-item">
                                 <a class="nav-link nav-link-sm {{ current_page == 'add_user' ? 'active' : '' }}" href="{{ base_url_prefix }}/users/add">
                                     <i class="bi bi-person-plus me-2"></i>{% trans %}Add user{% endtrans %}
-                                </a>
-                            </li>
-                            {% endif %}
-                            {% if perm_templ_perm_edit %}
-                            <li class="nav-item">
-                                <a class="nav-link nav-link-sm {{ current_page == 'list_perm_templ' ? 'active' : '' }}" href="{{ base_url_prefix }}/permissions/templates">
-                                    <i class="bi bi-person-lock me-2"></i>{% trans %}List permission templates{% endtrans %}
-                                </a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link nav-link-sm {{ current_page == 'add_perm_templ' ? 'active' : '' }}" href="{{ base_url_prefix }}/permissions/templates/add">
-                                    <i class="bi bi-person-plus-fill me-2"></i>{% trans %}Add permission template{% endtrans %}
                                 </a>
                             </li>
                             {% endif %}
@@ -216,15 +204,23 @@
                                     <i class="bi bi-plus-circle me-2"></i>{% trans %}Add group{% endtrans %}
                                 </a>
                             </li>
-                            {% if perm_templ_perm_edit %}
-                            <li class="nav-item mt-2">
-                                <hr class="my-2 opacity-50">
-                            </li>
+                        </ul>
+                    </li>
+                    {% endif %}
+
+                    {% if perm_templ_perm_edit %}
+                    <!-- Permissions -->
+                    <li class="nav-item">
+                        <div class="nav-section-header">
+                            <i class="bi bi-shield-lock me-2"></i>{% trans %}Permissions{% endtrans %}
+                        </div>
+                        <ul class="nav nav-pills flex-column ms-3">
                             <li class="nav-item">
                                 <a class="nav-link nav-link-sm {{ current_page == 'list_perm_templ' ? 'active' : '' }}" href="{{ base_url_prefix }}/permissions/templates">
                                     <i class="bi bi-shield-fill-check me-2"></i>{% trans %}List permission templates{% endtrans %}
                                 </a>
                             </li>
+                            {% if perm_templ_perm_add %}
                             <li class="nav-item">
                                 <a class="nav-link nav-link-sm {{ current_page == 'add_perm_templ' ? 'active' : '' }}" href="{{ base_url_prefix }}/permissions/templates/add">
                                     <i class="bi bi-shield-plus me-2"></i>{% trans %}Add permission template{% endtrans %}
